--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,10 @@
   font-family: Raleway;
   scroll-behavior: smooth;
 }
+.swiper-button-next,
+.swiper-button-prev {
+    right: 10px;
+    color: #22c55e !important;
+    fill: #22c55e !important;
+    stroke: #22c55e !important;
+}
